<resources>
    <string name="app_name">Medibox</string>
    <string name="misdatos">Mis Datos</string>
    <string name="enviardatos">Enviar Datos</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ritmoc">Ritmo&#10;Cardiaco</string>
    <string name="csesion">Cerrar&#10;Sesión</string>
    <string name="glucosa">Glucosa</string>
    <string name="oxigenacion">Oxigenación</string>
    <string name="temperatura">Temperatura</string>
    <string name="imc">IMC</string>
    <string name="cerrarS">Cerrar Sesión</string>
    <!-- Rango de ritmo cardiaco -->
    <string-array name="rg_ritmoc">
        <item>60ppm o menos</item>
        <item>60ppm - 100ppm</item>
        <item>Más de 100ppm</item>
    </string-array>
    <!-- Rango de glucosa -->
    <string-array name="rg_glucosa">
        <item>Más de: 200 mg/dl</item>
        <item>160 a 190 mg/dl</item>
        <item>80 a 120 mg/dl</item>
        <item>Menos de: 70mg/dl</item>
    </string-array>
    <!-- rango de oxigenacion -->
    <string-array name="rg_oxigenacion">
        <item>95%</item>
        <item>96%</item>
        <item>97%</item>
        <item>98%</item>
        <item>99%</item>
        <item>100%</item>
    </string-array>
    <!-- rango de temperatura -->
    <string-array name="rg_temperatura">
        <item>35ºC o menos</item>
        <item>36ªC - 38ºC</item>
        <item>Más de 39ºC</item>
    </string-array>
    <!-- Textos Hint -->
    <string name="nombre">Nombre</string>
    <string name="apellidoMaterno">Apellido Materno</string>
    <string name="apellidoPaterno">Apellido Paterno</string>
    <string name="fechanacimiento">Fecha de Nacimiento</string>
    <string name="iniciarSesion">¿Ya tienes cuenta? Inicia Sesión</string>
</resources>