<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16sp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".signoRitmoc">

        <TextView
            android:id="@+id/bg_ritmoc"
            android:layout_width="wrap_content"
            android:layout_height="300sp"
            android:background="@drawable/deg_ritmoc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="190dp"
            android:layout_height="104dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/nexa_heavy"
            android:gravity="left"
            android:text="@string/ritmoc"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Rango -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="68sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" >

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:hint="Rango de Ritmo Cardiaco" />
        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:contentDescription="@string/ritmoc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg_ritmoc"
            app:srcCompat="@drawable/ritmo_cardiaco" />

        <TextView
            android:id="@+id/guardar"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40sp"
            android:background="@drawable/boton_redondo"
            android:shadowRadius="3"
            android:text="@string/guardar"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <TextView
            android:id="@+id/cancelar"
            style="@style/botonCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40sp"
            android:background="@drawable/boton_radiocancelar"
            android:onClick="btnCancelar"
            android:text="@string/cancelar"
            android:textAllCaps="false"
            android:textColor="@color/azulprincipal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guardar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
